<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_column_menu_top_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_top_app_bar_logo"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginLeft="12dp"
            android:contentDescription="@string/topbar_logo"
            android:src="@drawable/img_logo_topbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_top_app_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:fontFamily="@font/suite_semi_bold"
            android:text="@string/durymong"
            android:textColor="@color/main_purple"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_top_app_bar_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/top_app_bar_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/topbar_setting_icon"
            android:src="@drawable/ic_topbar_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_column_detail_screen_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FAFAFA"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_column_menu_top_bar">

        <LinearLayout
            android:id="@+id/ll_search_component"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_bg_searchbar"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/type_to_search"
                android:inputType="text"
                android:textColor="@color/gray4"
                android:textColorHint="@color/gray3"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_column_search" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_column_menu_list"
            tools:listitem="@layout/item_column_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/ll_search_component"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>